work on mobile nav menu mix-blend-mode issua and fix colorado county map, fix build errors

--- a/app/components/MobileNavMenu/component.module.css
+++ b/app/components/MobileNavMenu/component.module.css
@@ -1,6 +1,5 @@
 .mobileNavMenuContainer {
   position: relative;
-  mix-blend-mode: normal;
   .mobileNavMenu {
     display: flex;
     flex-direction: column;
